@@ -1,8 +1,6 @@
 package com.alta.service.impl;
 
 import com.alta.dto.StudentDto;
-import com.alta.entity.Student;
-import com.alta.entity.Task;
 import com.alta.mapper.StudentMapper;
 import com.alta.repository.StudentRepository;
 import com.alta.service.StudentService;
@@ -10,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,19 +17,11 @@ public class DefaultStudentService implements StudentService {
 
     @Override
     public List<StudentDto> findAll() {
-        return studentRepository.findAll().stream().map(studentMapper::toStudentDto).collect(Collectors.toList());
+        return studentRepository.findAll().stream().map(studentMapper::toStudentDto).toList();
     }
 
     @Override
-    public void save(Student student) {
-        studentRepository.save(student);
-    }
-
-    @Override
-    public List<Task> getTasks(List<Student> students) {
-        return students.stream()
-                .flatMap(student -> student.getTasks().stream())
-                .distinct()
-                .collect(Collectors.toList());
+    public List<StudentDto> findAllByIds(List<Integer> studentIds) {
+        return studentRepository.findAllById(studentIds).stream().map(studentMapper::toStudentDto).toList();
     }
 }
